--- a/GazPromForChildren2025WebApp/GazPromForChildren2025WebApp.csproj
+++ b/GazPromForChildren2025WebApp/GazPromForChildren2025WebApp.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <EmbeddedResource Include="**\*.sql" />
+    <None Update="**\*.mdf">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
   </ItemGroup>
-
+  
 </Project>
