--- a/GazPromForChildren2025WebApp/GazPromForChildren2025WebApp.csproj
+++ b/GazPromForChildren2025WebApp/GazPromForChildren2025WebApp.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.38.0" />
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
   </ItemGroup>
